# py-mea-axion

./: .gitignore  CITATION.cff  CONTEXT.md  LICENSE  README.md  make_example_plots.py  pyproject.toml
benchmarking/: 20250918_LGI2 KD_Plate 2_D12N(000)_neuralMetrics.csv  20250920_LGI2 KD_Plate 2_D14N(000)_neuralMetrics.csv  20250921_LGI2 KD_Plate 2_D15N(000)_neuralMetrics.csv  20250922_LGI2 KD_Plate 2_D16N(000)_neuralMetrics.csv  20250923_LGI2 KD_Plate 2_D17N(000)_neuralMetrics.csv  20250924_LGI2 KD_Plate 2_D18N(000)_neuralMetrics.csv  20250925_LGI2 KD_Plate 2_D19N(000)_neuralMetrics.csv  20250928_LGI2 KD_Plate 2_D22N(000)_neuralMetrics.csv  20251002_LGI2 KD_Plate 2_D26N(000)_neuralMetrics.csv  20251004_LGI2 KD_Plate 2_D28N(000)_neuralMetrics.csv  20251008_LGI2 KD_Plate 2_D32N(000)_neuralMetrics.csv  20251017_LGI2 KD_Plate 2_D41N(000)_neuralMetrics.csv  all_benchmark_summary.csv  benchmark_all.py  benchmark_plate1.py  benchmark_plate2_d28.py  benchmark_summary.csv  plate1_benchmark_summary.csv
benchmarking/neuralmetrics/: 20250918_LGI2 KD_Plate 1_D12N(000)_neuralMetrics.csv  20250919_LGI2 KD_Plate 1_D13N(000)_neuralMetrics.csv  20250919_LGI2 KD_Plate 2_D13N(000)_neuralMetrics.csv  20250920_LGI2 KD_Plate 1_D14N(000)_neuralMetrics.csv  20250921_LGI2 KD_Plate 1_D15N(000)_neuralMetrics.csv  20250922_LGI2 KD_Plate 1_D16N(000)_neuralMetrics.csv  20250923_LGI2 KD_Plate 1_D17N(000)_neuralMetrics.csv  20250924_LGI2 KD_Plate 1_D18N(000)_neuralMetrics.csv  20250925_LGI2 KD_Plate 1_D19N(000)_neuralMetrics.csv  20250926_LGI2 KD_Plate 1_D20N(000)_neuralMetrics.csv  20250926_LGI2 KD_Plate 2_D20N(000)_neuralMetrics.csv  20250927_LGI2 KD_Plate 1_D21N(000)_neuralMetrics.csv  20250927_LGI2 KD_Plate 2_D21N(000)_neuralMetrics.csv  20250928_LGI2 KD_Plate 1_D22N(000)_neuralMetrics.csv  20250929_LGI2 KD_Plate 1_D23N(000)_neuralMetrics.csv  20250929_LGI2 KD_Plate 2_D23N(000)_neuralMetrics.csv  20250930_LGI2 KD_Plate 1_D24N(000)_neuralMetrics.csv  20250930_LGI2 KD_Plate 2_D24N(000)_neuralMetrics.csv  20251001_LGI2 KD_Plate 1_D25N(000)_neuralMetrics.csv  20251001_LGI2 KD_Plate 2_D25N(000)_neuralMetrics.csv  20251002_LGI2 KD_Plate 1_D26N(000)_neuralMetrics.csv  (+21 more)
existing/: .gitignore  README.md  example_run.py  mea_raster_generator.py  pyproject.toml  requirements.txt
notebooks/: lgi2_kd_analysis.ipynb
py_mea_axion/: __init__.py  cli.py  pipeline.py
py_mea_axion/burst/: __init__.py  (+2 more)
tests/: test_burst_detection.py  test_burst_metrics.py  test_cli.py  test_metadata.py  test_network_detection.py  test_pipeline.py  test_spike_metrics.py  test_spk_reader.py  test_stats.py  test_synchrony.py  test_viz.py
(+16 files in other folders)
